--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <h2>is-a.team</h2>
     <p>is-a.team is a service that allows teams / dev teams to get a good-looking "sub.is-a.team" subdomain for their team websites.
-    To register your own subdomain, go to the <a href="https://github.com/Tm-Devs/register">is-a.team registration repository</a> and follow the instructions.</p>
+    To register your own subdomain, go to the <a href="https://github.com/is-a-team/register">is-a.team registration repository</a> and follow the instructions.</p>
 
     <br>
 
     <h2>Report abuse</h2>
 
-    <p>If you believe one of the subdomains is abusing the service, please <a href="https://github.com/Tm-Devs/register/issues/new?assignees=&labels=report-abuse&template=report-abuse-template.md&title=Report-Abuse">report</a> it.</p>
+    <p>If you believe one of the subdomains is abusing the service, please <a href="https://github.com/is-a-team/register/issues/new?assignees=&labels=report-abuse&template=report-abuse-template.md&title=Report-Abuse+%5BDOMAIN+HERE%5D">report</a> it.</p>
 
     <br>
 
