--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     
     <h2>Need Help?</h2>
     
-    <p>Contact us at support@is-a.team or by issues in GITHUB!</p>
+    <p>Contact us at <a href="mailto:support@is-a.team">support@is-a.team</a> or by issues in GITHUB!</p>
 </body>
 </html>
